# maker-rs

./: .dockerignore  .gitignore  BENCHMARKS.md  BEST-PRACTICES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  JIRA-STRUCTURE.md  MIGRATION-v0.2.0.md  PROJECT-CONTEXT.md  RACI-CHART.md  README.md  RISK-REGISTER.md  RUNBOOK-TEMPLATE.md  SECURITY.md  SUCCESS-METRICS.md  cliff.toml  deny.toml
.claude/: CLAUDE.md  README.md  documentation-review.local.md  github-social.local.md
.claude/agents/: context-elicitor.md  documentation-architect.md  governance-architect.md  metrics-architect.md  project-architect.md  research-specialist.md  timeline-architect.md
.claude/commands/: create-execution-plan.md  docs.md  generate-all.md  governance.md  metrics.md  plan.md  project-context.md  research.md  timeline.md  validate.md
.claude/docs/: COMMAND-GUIDE.md  SVG-VALIDATION.md
.claude/templates/: PROJECT-CONTEXT.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: epic.md  risk.md  story.md
.github/workflows/: benchmarks.yml  build-visuals.yml  ci.yml  docker.yml  release.yml  validate-artifacts.yml
_plan/: Agent0-tooling.md  CONTEXT-BRIEF.md  EXECUTION-PLAN.md  RUNSHEET.md  TASK-MANIFEST.json  TASK-PLAN-v0.3.0.md
_research/: DEPENDENCY-ANALYSIS.md  DOMAIN-RESEARCH.md
benches/: coding_tasks.rs  cost_scaling.rs  data_analysis.rs  ensemble_comparison.rs  math_logic.rs
docs/: CLAUDE-CODE-SETUP.md  CLI-REFERENCE.md  DOCKER.md  MCP-INTEGRATION.md  PROMPT-ENGINEERING.md  QUICKSTART.md  README.md  coordinating-insight-execution.md  defining-micro-roles.md  maker-mcp.md
docs/guides/: CODING.md  DATA-ANALYSIS.md  ML-PIPELINES.md
docs/project/: GANTT-CHART.md  PROJECT-CONTEXT.md  PROJECT-PLAN.md  SEVERITY-CLASSIFICATION.md  SystemDesignSpecification.txt  technical-implementation-manual.txt
docs/research/: RESEARCH_REPORT.md  raw_data.csv  statistical_analysis.md
examples/: arithmetic_demo.rs  coding_task.rs  custom_task.rs  ensemble_demo.rs  hanoi_demo.rs
examples/hanoi/: decomposer.rs  main.rs  state.rs
src/: lib.rs
src/core/: adaptive.rs  async_executor.rs  executor.rs  kmin.rs  matcher.rs  mod.rs  redflag.rs  (+2 more)
tests/: cli_functional.rs  error_correction_validation.rs  hanoi_demo_integration.rs  mcp_integration.rs  monte_carlo.rs  properties.rs  real_error_correction.rs  real_world_validation.rs  semantic_matching.rs
workspace/: EXECUTIVE-BRIEFING.md  README.md  build-deck.js  generate-assets.js  package-lock.json  package.json  validate-svg.js
(+81 files in other folders)
