[package]
name = "maker"
version = "0.1.0"
edition = "2021"
description = "MAKER Framework - Zero-error LLM agent execution via SPRT voting"
license = "MIT"
repository = "https://github.com/zircote/maker-rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.13", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync", "rt", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
proptest = "1"
wiremock = "0.6"

[[bin]]
name = "maker-mcp"
path = "src/bin/maker-mcp.rs"

[[bench]]
name = "cost_scaling"
harness = false
